--- a/locales/se.json
+++ b/locales/se.json
@@ -68,7 +68,7 @@
 	"GENDER": "KÖN",
 	"All": "Allt",
 	"Male": "Manlig",
-	"Female": "Kvinna",
+	"Female": "Kvinnlig",
 	"Clean": "Städa",
 	"Yes": "Ja",
 	"No": "Nej",
@@ -161,31 +161,66 @@
 	"You have not set any Alarms for this Generation!": "Du har inte ställt in några larm för denna generation!",
 	"User & Channel Management":"Användar och kanalhantering",
 	"Back to own Account":"Tillbaka till eget konto",
-   	"Discord or Telegram ID":"Discord eller Telegram ID",
-   	"ADMIN MODE ACTIVE":"ADMIN LÄGE AKTIVT",
-   	"User not found. Try Again":"Användaren hittades inte, försök igen",
-   	"USERS LIST":"ANVÄNDARLISTA",
-   	"DISCORD CHANNELS LIST":"DISCORD KANAL LISTA",
-   	"TELEGRAM CHANNELS LIST":"TELEGRAM KANAL LISTA",
-   	"Migrate":"Migrera",
-   	"Migrate Your Account":"Migriera ditt konto",
-   	"You are currently connected as":"Du är för närvarande inloggad som",
-   	"Your account will be migrated to":"Ditt konto kommer att migreras till",
-   	"Migration is definitive and cannot be reversed":"Migration är slutgiltigt och kan inte ångras",
-   	"Start account migration by":"Starta kontomigration genom att",
-   	"logging into your target telegram account":"logga in på ditt telegramkonto",
-   	"Sorry Migration From Telegram to Discord is not available yet":"Tyvärr är det inte möjligt att migrera från Telegram till Discord ännu",
-   	"User Already Exist":"Användaren finns redan",
-   	"Cannot Migrate to an existing User":"Kan inte migrera till en befintlig användare",
-   	"CONFIRM ACCOUNT MIGRATION":"BEKRÄFTA KONTOMIGRATION",
-   	"Channel Synchronization":"Kanalsynkronisation",
-   	"Successfully Synchronized Channels":"Kanalsynkronisation lyckades",
-   	"Please select channels you want to synchronize with current channel":"Välj vilka kanaler du vill synkronisera med denna kanal",
-   	"This will DELETE AND REPLACE all current tracking from ALL chosen channels":"Detta kommer att RADERA och ERSÄTTA alla befintliga spårningar från ALLA valda kanaler",
-   	"TELEGRAM CHANNELS TO SYNC WITH":"TELEGRAMKANAL ATT SYNKRONISERA MED",
-   	"TELEGRAM DISCORD TO SYNC WITH":"TELEGRAM DISCORD ATT SYNKRONISERA MED",
-   	"CONFIRM CHANNEL SYNCHRONIZATION":"BEKRÄFTA KANALSYNKRONISATION",
-   	"Synchronize Other Channels with this one":"Synkronisera andra kanaler med denna",
-   	"Select Energy Rewards you want to add":"Välj Energy belöning att lägga till",
-   	"Mega Energy":"Mega Energy"
+	"Discord or Telegram ID":"Discord eller Telegram ID",
+	"ADMIN MODE ACTIVE":"ADMIN LÄGE AKTIVT",
+	"User not found. Try Again":"Användaren hittades inte, försök igen",
+	"USERS LIST":"ANVÄNDARLISTA",
+	"DISCORD CHANNELS LIST":"DISCORD KANAL LISTA",
+	"TELEGRAM CHANNELS LIST":"TELEGRAM KANAL LISTA",
+	"Migrate":"Migrera",
+	"Migrate Your Account":"Migriera ditt konto",
+	"You are currently connected as":"Du är för närvarande inloggad som",
+	"Your account will be migrated to":"Ditt konto kommer att migreras till",
+	"Migration is definitive and cannot be reversed":"Migration är slutgiltigt och kan inte ångras",
+	"Start account migration by":"Starta kontomigration genom att",
+	"logging into your target telegram account":"logga in på ditt telegramkonto",
+	"Sorry Migration From Telegram to Discord is not available yet":"Tyvärr är det inte möjligt att migrera från Telegram till Discord ännu",
+	"User Already Exist":"Användaren finns redan",
+	"Cannot Migrate to an existing User":"Kan inte migrera till en befintlig användare",
+	"CONFIRM ACCOUNT MIGRATION":"BEKRÄFTA KONTOMIGRATION",
+	"Channel Synchronization":"Kanalsynkronisation",
+	"Successfully Synchronized Channels":"Kanalsynkronisation lyckades",
+	"Please select channels you want to synchronize with current channel":"Välj vilka kanaler du vill synkronisera med denna kanal",
+	"This will DELETE AND REPLACE all current tracking from ALL chosen channels":"Detta kommer att RADERA och ERSÄTTA alla befintliga spårningar från ALLA valda kanaler",
+	"TELEGRAM CHANNELS TO SYNC WITH":"TELEGRAMKANAL ATT SYNKRONISERA MED",
+	"TELEGRAM DISCORD TO SYNC WITH":"TELEGRAM DISCORD ATT SYNKRONISERA MED",
+	"CONFIRM CHANNEL SYNCHRONIZATION":"BEKRÄFTA KANALSYNKRONISATION",
+	"Synchronize Other Channels with this one":"Synkronisera andra kanaler med denna",
+	"Select Energy Rewards you want to add":"Välj Energy belöning att lägga till",
+	"Mega Energy":"Mega Energy",
+	"Delete Quests tracking for this Mega Energy":"Radera Questspårning för denna Mega Energy",
+	"Delete Quests tracking for this item":"Radera Questspårning för detta item",
+	"This will delete tracking for invasion type":"Detta kommer att radera spårning för Invasion av typen",
+	"Delete tracking for Invasions":"Radera spårning för Invasioner",
+	"Delete ALL Invasions?":"Radera ALLA Invasioner?",
+	"This will delete all your Invasions Alarms and cannot be undone":"Detta kommer att radera alla dina Invasion Alarm och kan inte ångras",
+	"Update Distance for all tracked Invasions?":"Möchstest du die Distanz für alle getrackteten Invasionen aktualisieren?",
+	"This will update Distance settings for ALL tracked Invasions":"Detta kommer att uppdatera avståndsinställningarna för ALLA spårade Invasioner",
+	"ALL Invasions Cleaning":"Städa alla Invasioner",
+	"NEW INVASIONS ALARM":"NYTT INVASION ALARM",
+	"INVASIONS TRACKED":"SPÅRADE INVASIONS",
+	"ALL INVASIONS":"ALLA INVASIONER",
+	"mixed":"blandat",
+	"dark":"dark",
+	"fairy":"fairy",
+	"water":"water",
+	"steel":"steel",
+	"bug":"bug",
+	"fire":"fire",
+	"ice":"ice",
+	"ground":"ground",
+	"ghost":"ghost",
+	"electric":"electric",
+	"normal":"normal",
+	"psychic":"psychic",
+	"rock":"rock",
+	"fighting":"fighting",
+	"poison":"poison",
+	"grass":"grass",
+	"flying":"flying",
+	"dragon":"dragon",
+	"everything":"alla",
+	"Configured Distance:":"Inställt avstånd:",
+	"Distance Display":"Distans Visning",
+	"meters around your position":"meter runt din position"
 }
