Better Diplay for Distance Switch

--- a/locales/fr.json
+++ b/locales/fr.json
@@ -222,5 +222,7 @@
     "Configured Distance:":"Distance Configurée:",
     "Distance Display":"Visualisation de la Distance",
     "meters around your position":"mètres autour de votre position",
-    "Areas":"Zones"
+    "Areas":"Zones",
+    "Use Areas":"Utiliser les Zones",
+    "Set Distance":"Définir une Distance"
 }
