Warning if both PvP selected + enforce PvP Min/Max

--- a/locales/fr.json
+++ b/locales/fr.json
@@ -224,5 +224,8 @@
     "meters around your position":"mètres autour de votre position",
     "Areas":"Zones",
     "Use Areas":"Utiliser les Zones",
-    "Set Distance":"Définir une Distance"
+    "Set Distance":"Définir une Distance",
+    "Some of your alarms contains both IV and PvP Filters":"Certaines de vos alarmes contiennent à la fois des Filtres IV et PvP",
+    "Some of your alarms contains both PvP Great and PvP Ultra Filters":"Certaines de vos alarmes contiennent à la fois des Filtres PvP Super et Ultra",
+    "Alarms will only be triggered if ALL Filters are met":"Une alarme ne sera générée que si les 2 conditions sont remplies"
 }
