Allow for Location to be deleted + Back to Area tracking

--- a/locales/fr.json
+++ b/locales/fr.json
@@ -227,5 +227,8 @@
     "Set Distance":"Définir une Distance",
     "Some of your alarms contains both IV and PvP Filters":"Certaines de vos alarmes contiennent à la fois des Filtres IV et PvP",
     "Some of your alarms contains both PvP Great and PvP Ultra Filters":"Certaines de vos alarmes contiennent à la fois des Filtres PvP Super et Ultra",
-    "Alarms will only be triggered if ALL Filters are met":"Une alarme ne sera générée que si les 2 conditions sont remplies"
+    "Alarms will only be triggered if ALL Filters are met":"Une alarme ne sera générée que si les 2 conditions sont remplies",
+    "Delete":"Supprimer",
+    "Location deleted successfully":"Position Supprimée",
+    "All your distance settings have been reset":"Tous vos paramètres de distance ont été réinitialisés"
 }
