DE locale: correcty wrong type translations

--- a/locales/de.json
+++ b/locales/de.json
@@ -201,7 +201,7 @@
    "INVASIONS TRACKED":"INVASIONS EINSTELLUNGEN",
    "ALL INVASIONS":"ALLE INVASIONEN",
    "mixed":"Gemischt",
-   "dark":"Dunkel",
+   "dark":"Unlicht",
    "fairy":"Fee",
    "water":"Wasser",
    "steel":"Stahl",
@@ -213,10 +213,10 @@
    "electric":"Elektro",
    "normal":"Normal",
    "psychic":"Psycho",
-   "rock":"Stein",
+   "rock":"Gestein",
    "fighting":"Kampf",
    "poison":"Gift",
-   "grass":"Grass",
+   "grass":"Pflanze",
    "flying":"Flug",
    "dragon":"Drache",
    "everything":"alles",
