DE locale: added missing translations

--- a/locales/de.json
+++ b/locales/de.json
@@ -223,5 +223,6 @@
    "Configured Distance:":"Eingestellte Distanz:",
    "Distance Display":"Distanzvisualisierung",
    "meters around your position":"Meter um deine Position",
-   "Areas":"Gebiete"
+   "Areas":"Gebiete",
+   "INVASIONS":"INVASIONEN"
 }
