--- a/locales/de.json
+++ b/locales/de.json
@@ -13,7 +13,7 @@
    "DELETE ALL":"ALLE LÖSCHEN",
    "DISTANCE":"DISTANZ",
    "Eggs":"Eier",
-   "Eggs Level":"Ei Level",
+   "Eggs Level":"Ei-Level",
    "Error":"Fehler",
    "GREAT":"SUPER",
    "IV":"IV",
@@ -21,34 +21,34 @@
    "meters":"Meter",
    "Please set it in discord using":"Bitte setze es in Discord mit dem entsprechenden",
    "POKÉMONS":"POKÉMON",
-   "POKÉMONS TRACKED":"POKÉMON EINSTELLUNGEN",
-   "EGGS & RAIDS TRACKED":"RAID EINSTELLUNGEN",
-   "QUESTS TRACKED":"QUEST EINSTELLUNGEN",
+   "POKÉMONS TRACKED":"POKÉMON-EINSTELLUNGEN",
+   "EGGS & RAIDS TRACKED":"RAID-EINSTELLUNGEN",
+   "QUESTS TRACKED":"QUEST-EINSTELLUNGEN",
    "QUESTS":"QUESTS",
    "RAIDS":"RAIDS",
    "Raids":"Raids",
-   "Raids Level":"Raid Level",
+   "Raids Level":"Raid-Level",
    "Settings updated successfully":"Einstellungen erfolgreich aktualisiert",
    "STATS":"STATS",
-   "Successfully Added Monster Alarm":"Pokémon Einstellung erfolgreich gespeichert",
-   "Successfully Added Quest Alarm(s)":"Quest Einstellung erfolgreich gespeichert",
-   "Successfully Added Raids Alarm(s)":"Raid und Ei Einstellungen erfolgreich gespeichert",
-   "Successfully Deleted Egg Alarm":"Ei Einstellung erfolgreich gelöscht",
-   "Successfully Deleted Eggs & Raids Alarm(s)":"Raid und Ei Einstellungen erfolgreich gelöscht",
-   "Successfully Deleted Monster Alarm(s)":"Pokémon Einstellung erfolgreich gelöscht",
-   "Successfully Deleted Quest Alarm(s)":"Quest Einstellung erfolgreich gelöscht",
-   "Successfully Deleted Raid Alarm(s)":"Raid Einstellung erfolgreich gelöscht",
-   "Successfully Updated Egg Alarm":"Ei Einstellung erfolgreich aktualisiert",
+   "Successfully Added Monster Alarm":"Pokémon-Einstellung erfolgreich gespeichert",
+   "Successfully Added Quest Alarm(s)":"Quest-Einstellung erfolgreich gespeichert",
+   "Successfully Added Raids Alarm(s)":"Raid- und Ei-Einstellungen erfolgreich gespeichert",
+   "Successfully Deleted Egg Alarm":"Ei-Einstellung erfolgreich gelöscht",
+   "Successfully Deleted Eggs & Raids Alarm(s)":"Raid- und Ei-Einstellungen erfolgreich gelöscht",
+   "Successfully Deleted Monster Alarm(s)":"Pokémon-Einstellung erfolgreich gelöscht",
+   "Successfully Deleted Quest Alarm(s)":"Quest-Einstellung erfolgreich gelöscht",
+   "Successfully Deleted Raid Alarm(s)":"Raid-Einstellung erfolgreich gelöscht",
+   "Successfully Updated Egg Alarm":"Ei-Einstellung erfolgreich aktualisiert",
    "Successfully Updated List of Areas":"Gebiete erfolgreich aktualisiert",
-   "Successfully Updated Monster Alarm":"Pokémon Einstellung erfolgreich aktualisiert",
-   "Successfully Updated Quest Alarm":"Quest Einstellung erfolgreich aktualisiert",
-   "Successfully Updated Raid Alarm":"Raid Einstellung erfolgreich aktualisiert",
-   "Delete ALL tracked Mons?":"Alle Pokémon Einstellungen löschen",
-   "Delete ALL Raid/Eggs?":"Alle Raid Einstellungen löschen",
-   "Delete ALL Quests?":"Alle Quest Einstellungen löschen",
-   "This will delete all your Eggs & Raids Alarms and cannot be undone, are you sure ?":"Bist du dir sicher, dass du alle eingestellten Raids undwiderruflich löschen möchtest?",
-   "This will delete all your Pokémon Alarms and cannot be undone, are you sure ?":"Bist du dir sicher, dass du alle eingestellten Pokémon undwiderruflich löschen möchtest?",
-   "This will delete all your Quests Alarms and cannot be undone, are you sure ?":"Bist du dir sicher, dass du alle eingestellten Quests undwiderruflich löschen möchtest?",
+   "Successfully Updated Monster Alarm":"Pokémon-Einstellung erfolgreich aktualisiert",
+   "Successfully Updated Quest Alarm":"Quest-Einstellung erfolgreich aktualisiert",
+   "Successfully Updated Raid Alarm":"Raid-Einstellung erfolgreich aktualisiert",
+   "Delete ALL tracked Mons?":"Alle Pokémon-Einstellungen löschen",
+   "Delete ALL Raid/Eggs?":"Alle Raid-Einstellungen löschen",
+   "Delete ALL Quests?":"Alle Quest-Einstellungen löschen",
+   "This will delete all your Eggs & Raids Alarms and cannot be undone, are you sure ?":"Bist du dir sicher, dass du alle eingestellten Eier und Raids unwiderruflich löschen möchtest?",
+   "This will delete all your Pokémon Alarms and cannot be undone, are you sure ?":"Bist du dir sicher, dass du alle eingestellten Pokémon unwiderruflich löschen möchtest?",
+   "This will delete all your Quests Alarms and cannot be undone, are you sure ?":"Bist du dir sicher, dass du alle eingestellten Quests unwiderruflich löschen möchtest?",
    "ULTRA":"HYPER",
    "WEIGHT":"GEWICHT",
    "Weight":"Gewicht",
@@ -73,21 +73,21 @@
    "Yes":"Ja",
    "No":"Nein",
    "Apply to all Pokémons":"Auf alle Pokémon anwenden",
-   "NEW MONSTER ALARM":"NEUE POKÉMON EINSTELLUNG",
+   "NEW MONSTER ALARM":"NEUE POKÉMON-EINSTELLUNG",
    "Type":"Schreibe",
    "to display all Pokémons":"um alle Pokémon anzuzeigen",
    "Search":"Suche",
    "Cancel":"Abbrechen",
    "Submit":"Speichern",
-   "NEW RAID ALARM":"NEUE RAID EINSTELLUNG",
-   "Select Egg Levels you want to add":"Wähle Ei Level aus, die du hinzufügen willst",
-   "Select Raid Levels you want to add":"Wähle Raid Level aus, die du hinzufügen willst",
+   "NEW RAID ALARM":"NEUE RAID-EINSTELLUNG",
+   "Select Egg Levels you want to add":"Wähle Ei-Level aus, die du hinzufügen willst",
+   "Select Raid Levels you want to add":"Wähle Raid-Level aus, die du hinzufügen willst",
    "Select Pokémon Quests you want to add":"Wähle Quests aus, die du hinzufügen willst",
-   "Select the Raid Bosses you want to add":"Wähle Raid Bosse aus, die du hinzufügen willst",
-   "NEW QUEST ALARM":"NEUE QUEST EINSTELLUNG",
+   "Select the Raid Bosses you want to add":"Wähle Raid-Bosse aus, die du hinzufügen willst",
+   "NEW QUEST ALARM":"NEUE QUEST-EINSTELLUNG",
    "Select Pokémon Quests you want to add (Pokemons Currently available on Map)":"Wähle Pokémon, die du hinzufügen willst",
    "Pokemons Currently available on Map":"Aus den heute gescannten Quests",
-   "Or use search below to add another pokemon":"Oder verwende die Suche um ein anderes auszuwählen",
+   "Or use search below to add another pokemon":"Oder verwende die Suche, um ein anderes auszuwählen",
    "Select Quests Items you want to add":"Wählen Items, die du hinzufügen willst.",
    "Level":"Level",
    "Update":"Aktualisieren",
@@ -101,9 +101,9 @@
    "Renew":"Erneuern",
    "Subscription valid until":"Abo gültig bis",
    "Alerts":"Nachrichten",
-   "ALL Monsters Cleaning":"Alle Pokémon bereinigen",
-   "ALL Raid/Egg Cleaning":"Alle Raids bereinigen",
-   "ALL Quests Cleaning":"Alle Quests bereinigen",
+   "ALL Monsters Cleaning":"Pokémon nach Ablauf bereinigen",
+   "ALL Raid/Egg Cleaning":"Raids nach Ablauf bereinigen",
+   "ALL Quests Cleaning":"Quests nach Ablauf bereinigen",
    "Your Location is not set and cannot be set here!":"Dein Standort ist nicht festgelegt und kann hier nicht festgelegt werden!",
    "Your Location is set to":"Dein Standort:",
    "You have not set any area yet!":"Du hast noch kein Gebiet gewählt!",
@@ -129,16 +129,16 @@
    "Delete tracking for":"Tracking löschen für",
    "This will delete tracking for":"Das löscht das Tracking für",
    "Are you sure?":"Bist du sicher?",
-   "Delete tracking for Eggs Level":"Lösche Tracking für Ei Level",
-   "This will delete tracking for Eggs Level":"Dadurch wird das Tracking gelöscht für Eier Level",
-   "Delete tracking for Raids Level":"Lösche Tracking für Raid Level",
-   "This will delete tracking for Raids Level":"Dadurch wird das Tracking gelöscht für Raid Level",
+   "Delete tracking for Eggs Level":"Lösche Tracking für Ei-Level",
+   "This will delete tracking for Eggs Level":"Dadurch wird das Tracking gelöscht für Ei-Level",
+   "Delete tracking for Raids Level":"Lösche Tracking für Raid-Level",
+   "This will delete tracking for Raids Level":"Dadurch wird das Tracking gelöscht für Raid-Level",
    "Delete Raid tracking for":"Lösche Raid Tracking für",
    "This will delete Raid tracking for":"Dadruch wird das Tracking gelöscht für folgenden Raid",
-   "Delete Quests tracking for":"Lösche Quest Tracking für",
+   "Delete Quests tracking for":"Lösche Quest-Tracking für",
    "This will delete Quests tracking for":"Dadurch wird das Quest Tracking gelöscht für",
    "Delete Quests Item tracking":"Lösche Quest Item tracking",
-   "This will delete Quests tracking for this item":"Dadurch wird das Quest Tracking gelöscht für folgendes Item",
+   "This will delete Quests tracking for this item":"Dadurch wird das Quest-Tracking gelöscht für folgendes Item",
    "Could not set Location":"Dein Standort konnte nicht gesetzt werden.",
    "User denied the request for Geolocation":"Anwender hat den Zugriff auf den Standort abgelehnt",
    "Location information is unavailable":"Standortinformationen sind nicht verfügbar",
@@ -189,19 +189,19 @@
    "Select Energy Rewards you want to add":"Wähle Energie Belohungen um diese hinzu zu fügen",
    "Mega Energy":"Mega Energie",
    "Delete Quests tracking for this Mega Energy":"Lösche das Quests-Tracking für diese Mega-Energie",
-   "Delete Quests tracking for this item":"Dadurch wird das Quest Tracking gelöscht für dieses Item",
+   "Delete Quests tracking for this item":"Dadurch wird das Quest-Tracking gelöscht für dieses Item",
    "This will delete tracking for invasion type":"Dadurch wird das Tracking für den Invasionstyp gelöscht",
    "Delete tracking for Invasions":"Lösche das Tracking für Invasion",
    "Delete ALL Invasions?":"Möchtest du ALLE Invasionen löschen?",
    "This will delete all your Invasions Alarms and cannot be undone":"Dadurch werden alle Invastionsalarme gelöscht und kann nicht rückgängig gemacht werden",
    "Update Distance for all tracked Invasions?":"Möchstest du die Distanz für alle getrackteten Invasionen aktualisieren?",
    "This will update Distance settings for ALL tracked Invasions":"Dadurch werden alle Distanzeinstellungen für Invasionen aktualisiert",
-   "ALL Invasions Cleaning":"Alle Invasionen säubern",
-   "NEW INVASIONS ALARM":"NEUE INVASION EINSTELLUNG",
-   "INVASIONS TRACKED":"INVASIONS EINSTELLUNGEN",
+   "ALL Invasions Cleaning":"Invasionen nach Ablauf bereinigen",
+   "NEW INVASIONS ALARM":"NEUE INVASION-EINSTELLUNG",
+   "INVASIONS TRACKED":"INVASIONS-EINSTELLUNGEN",
    "ALL INVASIONS":"ALLE INVASIONEN",
    "mixed":"Gemischt",
-   "dark":"Dunkel",
+   "dark":"Unlicht",
    "fairy":"Fee",
    "water":"Wasser",
    "steel":"Stahl",
@@ -213,15 +213,16 @@
    "electric":"Elektro",
    "normal":"Normal",
    "psychic":"Psycho",
-   "rock":"Stein",
+   "rock":"Gestein",
    "fighting":"Kampf",
    "poison":"Gift",
-   "grass":"Grass",
+   "grass":"Pflanze",
    "flying":"Flug",
    "dragon":"Drache",
    "everything":"alles",
    "Configured Distance:":"Eingestellte Distanz:",
    "Distance Display":"Distanzvisualisierung",
    "meters around your position":"Meter um deine Position",
-   "Areas":"Gebiete"
+   "Areas":"Gebiete",
+   "INVASIONS":"INVASIONEN"
 }
