Update Position and Areas on Profiles

--- a/locales/fr.json
+++ b/locales/fr.json
@@ -240,7 +240,7 @@
     "By clcking 'Create New Profile' below you will assign a name to this default Profile":"Cliquez sur 'Créer un Nouveau Profil' pour assigner un nom au profil par défaut",
     "You will then have the option to create additional Profiles":"Vous aurez ensuite la possibilité de créer des profils additionnels",
     "Active Profile is shown in green below":"Le Profil actif est en vert ci-dessous",
-    "Choose Profile to view or activate":"Choisissez un Profile à visualiser ou à activer",
+    "Choose Profile to view or activate":"Choisissez un Profil à visualiser ou à activer",
     "Successfully Updated Active Profile":"Le Profil actif a été modifié",
     "Successfully Switched Profile View":"Le Profil en cours de visualisation a été modifié",
     "View":"Visualiser",
