Add Lure Support

--- a/locales/da.json
+++ b/locales/da.json
@@ -152,9 +152,9 @@
 	"This will update Distance settings for ALL tracked Raids & Eggs": "Dette vil opdatere afstands instillingen for ALLE sporede Raids og Æg",
 	"Update Distance for all tracked Quests?": "Skal afstanden opdateres for alle sporede Missioner?",
 	"This will update Distance settings for ALL tracked Quests": "Dette vil opdatere afstands instillinger for ALLE sporede Missioner",
-	"Successfully Update Distance on ALL Pokémons": "Afstand er opdateret for ALLE Pokémons",
-	"Successfully Update Distance on ALL Raids & Eggs": "Afstand er opdateret for ALLE  Raids & Æg",
-	"Successfully Update Distance on ALL Quests": "Afstand er opdateret for ALLE Missioner",
+	"Successfully Updated Distance on ALL Pokémons": "Afstand er opdateret for ALLE Pokémons",
+	"Successfully Updated Distance on ALL Raids & Eggs": "Afstand er opdateret for ALLE  Raids & Æg",
+	"Successfully Updated Distance on ALL Quests": "Afstand er opdateret for ALLE Missioner",
 	"UPDATE": "OPDATERE",
 	"UPDATE DISTANCE": "OPDATERE AFSTAND",
 	"You have not set any Alarm for ALL Pokemons, Please select a Gen!": "Du har ikke sat nogle alarmer for ALLE Pokémons. Vælk venligst en Generation!",
