--- a/locales/de.json
+++ b/locales/de.json
@@ -152,9 +152,9 @@
    "This will update Distance settings for ALL tracked Raids & Eggs":"Dadurch wird die Distanz für ALLE getrackten Raids & Eier aktualisiert",
    "Update Distance for all tracked Quests?":"Möchstest du die Distanz für alle getrackten Quests aktualisieren?",
    "This will update Distance settings for ALL tracked Quests":"Dadurch wird die Distanz für ALLE getrackten Quests aktualisiert",
-   "Successfully Update Distance on ALL Pokémons":"Distanzeinstellungen wurden erfolgreich für alle Pokémon gespeichert",
-   "Successfully Update Distance on ALL Raids & Eggs":"Distanzeinstellungen wurden erfolgreich für alle Raids & Eier gespeichert",
-   "Successfully Update Distance on ALL Quests":"Distanzeinstellungen wurden erfolgreich für alle Quests gespeichert",
+   "Successfully Updated Distance on ALL Pokémons":"Distanzeinstellungen wurden erfolgreich für alle Pokémon gespeichert",
+   "Successfully Updated Distance on ALL Raids & Eggs":"Distanzeinstellungen wurden erfolgreich für alle Raids & Eier gespeichert",
+   "Successfully Updated Distance on ALL Quests":"Distanzeinstellungen wurden erfolgreich für alle Quests gespeichert",
    "UPDATE":"AKTUALISIEREN",
    "UPDATE DISTANCE":"DISTANZ AKTUALISIEREN",
    "You have not set any Alarm for ALL Pokemons, Please select a Gen!":"Du hast noch keine Benachrichtung für ALLE Pokémon erstellt, bitte wähle eine Generation!",
