--- a/locales/fr.json
+++ b/locales/fr.json
@@ -150,9 +150,9 @@
     "This will update Distance settings for ALL tracked Raids & Eggs":"Cette action modifiera la distance de suivi pour TOUS les Raids et Oeufs suivis",
     "Update Distance for all tracked Quests?":"Modifier la Distance pour TOUTES les quêtes?",
     "This will update Distance settings for ALL tracked Quests":"Cette action modifiera la distance de suivi pour TOUTES les quêtes suivies",
-    "Successfully Update Distance on ALL Pokémons":"Distance Mise à Jour avec Succès pour TOUS les Pokémons",
-    "Successfully Update Distance on ALL Raids & Eggs":"Distance Mise à Jour avec Succès pour TOUS les Raids et Oeufs",
-    "Successfully Update Distance on ALL Quests":"Distance Mise à Jour avec Succès pour TOUTES les quêtes",
+    "Successfully Updated Distance on ALL Pokémons":"Distance Mise à Jour avec Succès pour TOUS les Pokémons",
+    "Successfully Updated Distance on ALL Raids & Eggs":"Distance Mise à Jour avec Succès pour TOUS les Raids et Oeufs",
+    "Successfully Updated Distance on ALL Quests":"Distance Mise à Jour avec Succès pour TOUTES les quêtes",
     "UPDATE":"MAJ",
     "UPDATE DISTANCE":"MODIFIER LA DISTANCE",
     "You have not set any Alarm for ALL Pokemons, Please select a Gen!":"Vous n'avez configuré aucune Alarme pour TOUS les Pokémons. Sélectionnez une Génération!",
@@ -252,6 +252,32 @@
     "Active":"Actif",
     "Default Profile":"Profil par Défaut",
     "Rename Profile":"Renommer un Profil",
-    "Choose a New Profile Name":"Choisissez un nouveau Nom pour ce Profil"
-
+    "Choose a New Profile Name":"Choisissez un nouveau Nom pour ce Profil",
+    "Lures":"Leures",
+    "LURES":"LEURES",
+    "Normal Lure":"Type Normal",
+    "Glacial Lure":"Type Glacial",
+    "Mossy Lure":"Type Moussu",
+    "Magnetic Lure":"Type Magnetic",
+    "Delete tracking for Lures":"Supprimer le suivi des Leures",
+    "This will delete tracking for Lure":"Cette action supprimera le suivi des Leures",
+    "Update Distance for all tracked Lures?":"Modifier la Distance pour tous les Leures suivis?",
+    "This will update Distance settings for ALL tracked Lures":"Cette action modifiera la distance de suivi pour TOUS les Leures",
+    "Delete ALL tracked Lures?":"Supprimer tous les Leures suivis",
+    "This will delete all your Lures Alarms and cannot be undone":"Cette action va supprimer toutes vos alarmes de Leures et ne peut pas être annulée",
+    "ACTIVATE CLEANING ON ALL":"ACTIVER LE CLEANING SUR TOUS",
+    "Monsters":"Pokémons",
+    "Raid/Egg":"Raids/Oeufs",
+    "Quests":"Quêtes",
+    "Invasions":"Invasions",
+    "Lures":"Leures",
+    "LURES TRACKED":"LEURES SUIVIS",
+    "Successfully Added Invasion Alarm(s)":"Alarme d'Invasion ajoutée avec succès",
+    "Successfully Updated Invasion Alarm":"La liste des Invasions à été mise à jour",
+    "Successfully Deleted Invasion Alarm(s)":"Alarme Invasion supprimée avec succès",
+    "Successfully Updated Distance on ALL Invasions":"Distance Mise à Jour avec Succès pour TOUTES les Invasions",
+    "Successfully Added Lure Alarm(s)":"Alarme de Leure ajoutée avec succès",
+    "Successfully Updated Lure Alarm":"La liste de Leures à été mise à jour",
+    "Successfully Deleted Lure Alarm(s)":"Alarme de Leure supprimée avec succès",
+    "Successfully Updated Distance on ALL Lures":"Distance Mise à Jour avec Succès pour TOUS les Leures"
 }
