--- a/locales/nl.json
+++ b/locales/nl.json
@@ -150,9 +150,9 @@
     "This will update Distance settings for ALL tracked Raids & Eggs":"Bijwerken afstand instelling voor alle raids en eieren",
     "Update Distance for all tracked Quests?":"Bijwerken afstand instelling voor alle quests?",
     "This will update Distance settings for ALL tracked Quests":"Bijwerken afstand instelling voor alle quests",
-    "Successfully Update Distance on ALL Pokémons":"Afstand alle Pokémon succesvol bijgewerkt",
-    "Successfully Update Distance on ALL Raids & Eggs":"Afstand alle raids en eieren succesvol bijgewerkt",
-    "Successfully Update Distance on ALL Quests":"Afstand alle quests succesvol bijgewerkt",
+    "Successfully Updated Distance on ALL Pokémons":"Afstand alle Pokémon succesvol bijgewerkt",
+    "Successfully Updated Distance on ALL Raids & Eggs":"Afstand alle raids en eieren succesvol bijgewerkt",
+    "Successfully Updated Distance on ALL Quests":"Afstand alle quests succesvol bijgewerkt",
     "UPDATE":"BIJWERKEN",
     "UPDATE DISTANCE":"BIJWERKEN AFSTAND",
     "You have not set any Alarm for ALL Pokemons, Please select a Gen!":"Je hebt nog geen alarm ingesteld voor ALLE Pokemon, selecteer een generatie aub!",
