--- a/locales/pl.json
+++ b/locales/pl.json
@@ -135,9 +135,9 @@
     "The request to get user location timed out":"Prakroczono czas uzyskiwania lokalizacji",
     "An unknown error occurred":"Wystąpił nieznany błąd",
     "Geolocation is not supported by this browser":"Ta przeglądarka nie jest w stanie wykryć lokalizacji",
-    "Successfully Update Distance on ALL Pokémons":"Zaktualizowano odległość we wszystkich Pokemonach",
-    "Successfully Update Distance on ALL Raids & Eggs":"Zaktualizowano odległość we wszystkich Raidach",
-    "Successfully Update Distance on ALL Quests":"Zaktualizowano odległość we wszystkich Questach",
+    "Successfully Updated Distance on ALL Pokémons":"Zaktualizowano odległość we wszystkich Pokemonach",
+    "Successfully Updated Distance on ALL Raids & Eggs":"Zaktualizowano odległość we wszystkich Raidach",
+    "Successfully Updated Distance on ALL Quests":"Zaktualizowano odległość we wszystkich Questach",
     "UPDATE DISTANCE":"ZAKTUALIZUJ ODLEGŁOŚĆ",
     "Update Distance for all tracked Pokémons?":"Zaktualizować odległość dla wszystkich śledzonych Pokemonów?",
     "This will update Distance settings for ALL tracked Pokémons":"Ta czynność spowoduje zaktualizowanie odległości dla wszystkich śledzonych Pokemonów",
