--- a/locales/se.json
+++ b/locales/se.json
@@ -152,9 +152,9 @@
 	"This will update Distance settings for ALL tracked Raids & Eggs": "Detta kommer att uppdatera avståndsinställningarna för ALLA spårade raider och ägg",
 	"Update Distance for all tracked Quests?": "Uppdatera distans för alla spårade uppdrag?",
 	"This will update Distance settings for ALL tracked Quests": "Detta kommer att uppdatera avståndsinställningarna för ALLA spårade uppdrag",
-	"Successfully Update Distance on ALL Pokémons": "Uppdatera avstånd på alla Pokémons",
-	"Successfully Update Distance on ALL Raids & Eggs": "Uppdatera avstånd på ALLA Raids & Eggs",
-	"Successfully Update Distance on ALL Quests": "Uppdatera avstånd på ALLA uppdrag framgångsrikt",
+	"Successfully Updated Distance on ALL Pokémons": "Uppdatera avstånd på alla Pokémons",
+	"Successfully Updated Distance on ALL Raids & Eggs": "Uppdatera avstånd på ALLA Raids & Eggs",
+	"Successfully Updated Distance on ALL Quests": "Uppdatera avstånd på ALLA uppdrag framgångsrikt",
 	"UPDATE": "UPPDATERA",
 	"UPDATE DISTANCE": "UPPDATERA AVSTÅND",
 	"You have not set any Alarm for ALL Pokemons, Please select a Gen!": "Du har inte ställt in något larm för ALLA Pokémons. Välj en Generation!",
