Cleaning All Lures Support

--- a/locales/fr.json
+++ b/locales/fr.json
@@ -281,6 +281,6 @@
     "Successfully Deleted Lure Alarm(s)":"Alarme de Leure supprimée avec succès",
     "Successfully Updated Distance on ALL Lures":"Distance Mise à Jour avec Succès pour TOUS les Leures",
     "Delete ALL Lures?":"Supprimer TOUS les Leures suivis",
-    "NEW LURES ALARM":"NOUVELLE ALARME DE LEURE"
-
+    "NEW LURES ALARM":"NOUVELLE ALARME DE LEURE",
+    "ALL LURES":"TOUS LES LEURES"
 }
