--- a/locales/da.json
+++ b/locales/da.json
@@ -74,7 +74,7 @@
 	"No": "Nej",
 	"Apply to all Pokémons": "Anvend på alle Pokémons",
 	"NEW MONSTER ALARM": "NY MONSTERALARM",
-	"Type": "Slags",
+	"Type": "Skriv",
 	"to display all Pokémons": "for at vise alle Pokémons",
 	"Search": "Sæg",
 	"Cancel": "Annullere",
